--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,25 +1,21 @@
-.container {
+.form {
+  display: flex;
+  flex-direction: column;
   padding: 10px;
-  width: 300px;
-  border: 1px solid;
+  width: 40%;
+  border: solid black 1px;
 }
-.title {
-  padding: 0;
-  margin: 0;
-  margin-bottom: 10px;
+
+.label {
+  display: flex;
+  flex-direction: column;
 }
+
 .input {
-  margin-bottom: 20px;
+  margin: 5px 0 15px;
+  width: 200px;
 }
-.btnSubmit {
-  display: block;
-  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 250ms linear;
-}
-.btnSubmit:hover,
-.btnSubmit:focus {
-  background-color: #b5ddf2;
+
+.button {
+  width: fit-content;
 }
