--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,8 +1,9 @@
-.title {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 5px;
+.label {
+  display: flex;
+  flex-direction: column;
 }
+
 .input {
-  margin-bottom: 15px;
+  margin: 5px 0 15px;
+  width: 200px;
 }
