--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,3 +1,10 @@
+.container {
+  padding: 10px;
+  width: 300px;
+  border-radius: 5px;
+  border: 1px solid;
+}
+
 .label {
   display: flex;
   flex-direction: column;
