--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,21 +1,34 @@
-.form {
-  display: flex;
-  flex-direction: column;
+.container {
   padding: 10px;
-  width: 40%;
-  border: solid black 1px;
+  width: 300px;
+  border-radius: 5px;
+  border: 1px solid;
 }
 
 .label {
   display: flex;
   flex-direction: column;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 10px;
 }
 
 .input {
   margin: 5px 0 15px;
   width: 200px;
+  border-radius: 5px;
 }
 
 .button {
-  width: fit-content;
+  display: block;
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 250ms linear;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #b5ddf2;
 }
