--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -1,4 +1,19 @@
+.div {
+  display: flex;
+  justify-content: space-between;
+}
+
 .button {
-  margin-left: 15px;
-  width: fit-content;
+  margin-left: 10px;
+  /* display: block; */
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.75);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 250ms linear;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #b5ddf2;
 }
