--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,3 +1,11 @@
+.ul {
+  padding: 10px;
+  width: 300px;
+  border-radius: 5px;
+}
+
 .li {
   padding: 5px;
+  list-style: none;
+  border-bottom: 1px solid grey;
 }
